# mch2022-firmware-rp2040

./: .gitignore  CMakeLists.txt  Makefile  README.md  esp32.c  esp32.h  genheader.py  genuf2.py  hardware.h  i2c_peripheral.c  i2c_peripheral.h  lcd.c  lcd.h  main.c  main.h  msc.c  output.uf2  tusb_config.h  uart_task.c  uart_task.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c  usb_descriptors.h  version.h  webusb_task.c  webusb_task.h  ws2812.c  ws2812.h
.github/workflows/: cd-release.yml  ci-build.yml
bootloader/: bootloader.ld  i2c_peripheral.c  i2c_peripheral.h  main.c
flashloader/: flashloader.c
i2c_slave/: CMakeLists.txt  i2c_slave.c
i2c_slave/include/: i2c_fifo.h  i2c_slave.h
nec_transmit/: nec_transmit.c  nec_transmit.h
usb/: tusb_config.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c
